--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             height: calc(100vh - 4em);
             width: 100%;
         }
+
+        /* mobile */
+        @media only screen and (max-width: 600px) {
+            #map {
+                height: calc(100vh - 2em);
+            }
+        }
     </style>
 
 
