--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UIUC Map</title>
+    <title>Illini Innovations Map</title>
 
     <style>
         header {
@@ -14,6 +14,7 @@
             color: white;
             text-align: center;
         }
+
         #map {
             height: calc(100vh - 4em);
             width: 100%;
@@ -36,6 +37,9 @@
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
 </head>
 
+
+<script src="leaflet-heat.js"></script>
+
 <body>
     <header>
         <h1>Illini Innovations</h1>
@@ -51,16 +55,25 @@
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }).addTo(map);
 
+            var heatLayer = L.heatLayer([[40.1020, -88.2272, 0.5],
+            [40.1034188, -88.242912, 0.2],
+            [40.112118896978686, -88.22630676458144, 0.1],
+            [40.1149256, -88.2274353, 0.8],
+            [40.1020, -88.2272, 0.3]
+            ], { radius: 40 }).addTo(map);
+
+
+
         var marker = L.marker([40.1020, -88.2272]).addTo(map);
         marker.bindPopup("<b>Illini Innovations</b><br>1234 Innovation Drive").openPopup();
 
-        var DRESmarker = L.marker([40.1034188,-88.242912]).addTo(map);
-       DRESmarker.bindPopup("<b>DRES</b><br>1234 Innovation Drive").openPopup();
+        var DRESmarker = L.marker([40.1034188, -88.242912]).addTo(map);
+        DRESmarker.bindPopup("<b>DRES</b><br>1234 Innovation Drive").openPopup();
 
         var PLATOmarker = L.marker([40.112118896978686, -88.22630676458144]).addTo(map);
         PLATOmarker.bindPopup("<b>DRES</b><br>1234 Innovation Drive").openPopup();
 
-        var NCSAmarker = L.marker([40.1149256,-88.2274353]).addTo(map);
+        var NCSAmarker = L.marker([40.1149256, -88.2274353]).addTo(map);
         NCSAmarker.bindPopup("<b>NCSA</b><br>1234 Innovation Drive").openPopup();
 
         var Mosaicmarker = L.marker([40.1020, -88.2272]).addTo(map);
@@ -71,16 +84,16 @@
         // Show coordinates on click
         var popup = L.popup();
 
-function onMapClick(e) {
-    popup
-        .setLatLng(e.latlng)
-        .setContent("You clicked the map at " + e.latlng.toString())
-        .openOn(map);
-}
+        function onMapClick(e) {
+            popup
+                .setLatLng(e.latlng)
+                .setContent("You clicked the map at " + e.latlng.toString())
+                .openOn(map);
+        }
 
-map.on('click', onMapClick);
+        map.on('click', onMapClick);
 
-        
+
 
     </script>
 </body>
