--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Illini Inonovations</title>
+    <title>Illini Innovations</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
@@ -173,6 +173,8 @@
     </style>
 </head>
 
+
+
 <body>
     <div id="map"></div>
     <script>
@@ -181,8 +183,12 @@
             container: 'map', // container ID
             // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
             style: 'mapbox://styles/mapbox/streets-v12', // style URL
+            // style: 'mapbox://styles/mapbox/light-v11',
+
             center: [-88.228333, 40.110558], // starting position [lng, lat]
-            zoom: 15 // starting zoom
+            zoom: 15, // starting zoom
+            pitch: 45
+
         });
 
         // Add zoom and rotation controls to the map.
@@ -220,8 +226,63 @@
             .togglePopup();
 
 
-            
+            map.on('style.load', () => {
+
+
+                // Insert the layer beneath any symbol layer.
+                const layers = map.getStyle().layers;
+                const labelLayerId = layers.find(
+                    (layer) => layer.type === 'symbol' && layer.layout['text-field']
+                ).id;
+
+                // The 'building' layer in the Mapbox Streets
+                // vector tileset contains building height data
+                // from OpenStreetMap.
+                map.addLayer(
+                    {
+                        'id': 'add-3d-buildings',
+                        'source': 'composite',
+                        'source-layer': 'building',
+                        'filter': ['==', 'extrude', 'true'],
+                        'type': 'fill-extrusion',
+                        'minzoom': 15,
+                        'paint': {
+                            'fill-extrusion-color': '#aaa',
+
+                            // Use an 'interpolate' expression to
+                            // add a smooth transition effect to
+                            // the buildings as the user zooms in.
+                            'fill-extrusion-height': [
+                                'interpolate',
+                                ['linear'],
+                                ['zoom'],
+                                15,
+                                0,
+                                15.05,
+                                ['get', 'height']
+                            ],
+                            'fill-extrusion-base': [
+                                'interpolate',
+                                ['linear'],
+                                ['zoom'],
+                                15,
+                                0,
+                                15.05,
+                                ['get', 'min_height']
+                            ],
+                            'fill-extrusion-opacity': 0.6
+                        }
+                    },
+                    labelLayerId
+                );
+            });
+
+
+
     </script>
+
+    
+
 
 </body>
 
