--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Illini Innovations</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 </head>
 
@@ -13,7 +14,6 @@
     <header>
         <h1>Illini Innovations Map</h1>
     </header>
-    
     <div id="map"></div>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
     <script src="script.js"></script>
