CODE FOR HEATMAP

--- a/index.html
+++ b/index.html
@@ -136,6 +136,97 @@ createMarker('https://web.archive.org/web/20230506232336/https://spinelessbooks.
 
 
 
+var data = [
+            [-88.2265, 40.1025],
+            [-88.2270, 40.1025],
+            [-88.2275, 40.1025],
+            [-88.2265, 40.1030],
+            [-88.2270, 40.1030],
+            [-88.2275, 40.1030],
+            [-88.2265, 40.1035],
+            [-88.2270, 40.1035],
+            [-88.2275, 40.1035]
+        ];
+
+        map.on('load', function() {
+            // Create a heatmap layer
+            map.addLayer({
+                'id': 'heatmap',
+                'type': 'heatmap',
+                'source': {
+                    'type': 'geojson',
+                    'data': {
+                        'type': 'FeatureCollection',
+                        'features': [
+                            {
+                                'type': 'Feature',
+                                'geometry': {
+                                    'type': 'Point',
+                                    'coordinates': data[0]
+                                }
+                            },
+                            {
+                                'type': 'Feature',
+                                'geometry': {
+                                    'type': 'Point',
+                                    'coordinates': data[1]
+                                }
+                            },
+                            {
+                                'type': 'Feature',
+                                'geometry': {
+                                    'type': 'Point',
+                                    'coordinates': data[2]
+                                }
+                            },
+                            {
+                                'type': 'Feature',
+                                'geometry': {
+                                    'type': 'Point',
+                                    'coordinates': data[3]
+                                }
+                            },
+                            {
+                                'type': 'Feature',
+                                'geometry': {
+                                    'type': 'Point',
+                                    'coordinates': data[4]
+                                }
+                            },
+                            {
+                                'type': 'Feature',
+                                'geometry': {
+                                    'type': 'Point',
+                                    'coordinates': data[5]
+                                }
+                            },
+                            {
+                                'type': 'Feature',
+                                'geometry': {
+                                    'type': 'Point',
+                                    'coordinates': data[6]
+                                }
+                            },
+                            {
+                                'type': 'Feature',
+                                'geometry': {
+                                    'type': 'Point',
+                                    'coordinates': data[7]
+                                }
+                            },
+                            {
+                                'type': 'Feature',
+                                'geometry': {
+                                    'type': 'Point',
+                                    'coordinates': data[8]
+                                }
+                            }
+                        ]
+                    }
+                },
+            
+            });
+        });
 
 
 
@@ -188,6 +279,7 @@ createMarker('https://web.archive.org/web/20230506232336/https://spinelessbooks.
     );
 
 });
+
 
 
 
